--- a/r-xml2-feedstock/recipe/meta.yaml
+++ b/r-xml2-feedstock/recipe/meta.yaml
@@ -35,14 +35,15 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}        # [linux]
-    - {{ compiler('cxx') }}      # [linux]
+    - {{ compiler('cxx') }}      # [linux or osx]
     - rtools                     # [win32]
     - {{posix}}zip               # [win32]
 
   host:
     - mro-base
     - r-rcpp
-    - libxml2                    # [linux]
+    - libxml2                    # [linux or osx]
+    - zlib                       # [osx]
 
   run:
     - mro-base
