--- a/r-coin-feedstock/recipe/meta.yaml
+++ b/r-coin-feedstock/recipe/meta.yaml
@@ -10,16 +10,16 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/coin_{{ version }}.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/coin/coin_{{ version }}.tar.gz  # [linux or win32]
-  sha256: d518065d3e1eb00121cb4e0200e1e4ae6b68eca6e249afc38bbffa35d24105bb  # [linux or win32]
+  url:  # [linux or win32 or osx]
+    - {{ cran_mirror }}/src/contrib/coin_{{ version }}.tar.gz  # [linux or win32 or osx]
+    - {{ cran_mirror }}/src/contrib/Archive/coin/coin_{{ version }}.tar.gz  # [linux or win32 or osx]
+  sha256: d518065d3e1eb00121cb4e0200e1e4ae6b68eca6e249afc38bbffa35d24105bb  # [linux or win32 or osx]
 
   url: https://cran.microsoft.com/snapshot/2018-08-01/bin/windows/contrib/3.5/coin_1.2-2.zip  # [win64]
   sha256: fbe2899462b933c10a7993356fd7c71ee79373f0c604e43cdeca3ef1e397cd81  # [win64]
 
-  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/coin_1.2-2.tgz  # [osx]
-  sha256: 09e3d823057dda8bf1c3ea78997c3c5847d609e161b077c65c0f08a54ba26509  # [osx]
+  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/coin_1.2-2.tgz  # [osx and false]
+  sha256: 09e3d823057dda8bf1c3ea78997c3c5847d609e161b077c65c0f08a54ba26509  # [osx and false]
 
 build:
   merge_build_host: True  # [win32]
@@ -34,7 +34,8 @@ build:
 # Suggests: parallel, xtable, e1071, vcd, TH.data (>= 1.0-7)
 requirements:
   build:
-    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('c') }}        # [linux or osx]
+    - {{ compiler('fortran') }}  # [osx]
     - rtools                     # [win32]
     - {{posix}}zip               # [win32]
 
