--- a/r-irlba-feedstock/recipe/meta.yaml
+++ b/r-irlba-feedstock/recipe/meta.yaml
@@ -10,16 +10,16 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/irlba_{{ version }}.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/irlba/irlba_{{ version }}.tar.gz  # [linux or win32]
-  sha256: 3fdf2d8fefa6ab14cd0992740de7958f9f501c71aca93229f5eb03c54558fc38  # [linux or win32]
+  url:  # [linux or win32 or osx]
+    - {{ cran_mirror }}/src/contrib/irlba_{{ version }}.tar.gz  # [linux or win32 or osx]
+    - {{ cran_mirror }}/src/contrib/Archive/irlba/irlba_{{ version }}.tar.gz  # [linux or win32 or osx]
+  sha256: 3fdf2d8fefa6ab14cd0992740de7958f9f501c71aca93229f5eb03c54558fc38  # [linux or win32 or osx]
 
   url: https://cran.microsoft.com/snapshot/2018-08-01/bin/windows/contrib/3.5/irlba_2.3.2.zip  # [win64]
   sha256: c8d3cb864a9c3fa09db18a76eab1e97d8c5e338444efc001c2efde06a4209683  # [win64]
 
-  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/irlba_2.3.2.tgz  # [osx]
-  sha256: 941f6eaf437871ba9330476e7113065c9035d45160135cdfc27be91bb66cf2a1  # [osx]
+  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/irlba_2.3.2.tgz  # [osx and false]
+  sha256: 941f6eaf437871ba9330476e7113065c9035d45160135cdfc27be91bb66cf2a1  # [osx and false]
 
 build:
   merge_build_host: True  # [win32]
