--- a/r-oce-feedstock/recipe/meta.yaml
+++ b/r-oce-feedstock/recipe/meta.yaml
@@ -35,8 +35,8 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}        # [linux]
-    - {{ compiler('cxx') }}      # [linux]
-    - {{ compiler('fortran') }}  # [linux]
+    - {{ compiler('cxx') }}      # [linux or osx]
+    - {{ compiler('fortran') }}  # [linux or osx]
     - rtools                     # [win32]
     - {{posix}}zip               # [win32]
 
