--- a/r-odbc-feedstock/recipe/meta.yaml
+++ b/r-odbc-feedstock/recipe/meta.yaml
@@ -35,7 +35,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}        # [linux]
-    - {{ compiler('cxx') }}      # [linux]
+    - {{ compiler('cxx') }}      # [linux or osx]
     - rtools                     # [win32]
     - {{posix}}zip               # [win32]
 
