--- a/r-slam-feedstock/recipe/meta.yaml
+++ b/r-slam-feedstock/recipe/meta.yaml
@@ -10,16 +10,16 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/slam_{{ version }}.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/slam/slam_{{ version }}.tar.gz  # [linux or win32]
-  sha256: b0c866cc529eb7b8c560ec3e945294e924cf934af6346a72ef4e3df6ecc7c443  # [linux or win32]
+  url:  # [linux or win32 or osx]
+    - {{ cran_mirror }}/src/contrib/slam_{{ version }}.tar.gz  # [linux or win32 or osx]
+    - {{ cran_mirror }}/src/contrib/Archive/slam/slam_{{ version }}.tar.gz  # [linux or win32 or osx]
+  sha256: b0c866cc529eb7b8c560ec3e945294e924cf934af6346a72ef4e3df6ecc7c443  # [linux or win32 or osx]
 
   url: https://cran.microsoft.com/snapshot/2018-08-01/bin/windows/contrib/3.5/slam_0.1-43.zip  # [win64]
   sha256: 0c3c1271d72c79a2de5f92c818737071089639b83d3864a13e8c2a4e90ff7ea3  # [win64]
 
-  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/slam_0.1-43.tgz  # [osx]
-  sha256: 8a22739ab34da43ecc4cf993b87503f6746086a92a7201656d879ce076cbdb91  # [osx]
+  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/slam_0.1-43.tgz  # [osx and false]
+  sha256: 8a22739ab34da43ecc4cf993b87503f6746086a92a7201656d879ce076cbdb91  # [osx and false]
 
 build:
   merge_build_host: True  # [win32]
@@ -33,7 +33,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('c') }}        # [linux or osx]
     - rtools                     # [win32]
     - {{posix}}zip               # [win32]
 
