--- a/r-xml-feedstock/recipe/meta.yaml
+++ b/r-xml-feedstock/recipe/meta.yaml
@@ -31,6 +31,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}        # [not win]
+    - {{ compiler('cxx') }}      # [osx]
     - rtools                     # [win]
     - {{posix}}zip               # [win]
 
