--- a/r-rbokeh-feedstock/recipe/meta.yaml
+++ b/r-rbokeh-feedstock/recipe/meta.yaml
@@ -1,6 +1,4 @@
-{% set version = '0.6.3' %}  # [linux or win32]
-{% set version = '0.5.0' %}  # [win64]
-{% set version = '0.5.0' %}  # [osx]
+{% set version = '0.6.3' %}  # [linux or win32 or osx or win64]
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -11,14 +9,9 @@ package:
 
 source:
 
-  git_url: https://github.com/bokeh/rbokeh  # [not (osx or win64)]
-  git_tag: v0.6.3  # [not (osx or win64)]
+  git_url: https://github.com/bokeh/rbokeh  # [not win64]
+  git_tag: v0.6.3  # [not win64]
 
-  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/windows/contrib/3.5/rbokeh_0.5.0.zip  # [win64]
-  sha256: bac3803af25960d5c46af54c6d730f3fe0ffd09444e94e751cd6c872e3e4707e  # [win64]
-
-  url: https://cran.microsoft.com/snapshot/2018-08-01/bin/macosx/el-capitan/contrib/3.5/rbokeh_0.5.0.tgz  # [osx]
-  sha256: 0b771874e45e6cac4a5268de89280f054201de9d3acbfb568b5a993f2a38d6ec  # [osx]
 
 build:
   merge_build_host: True  # [win32]
